# api/swagger.yaml
@@ -382,6 +382,34 @@ paths:
         404:
           description: "Event not found"
       x-swagger-router-controller: "Event"
+  /events/getBooks/{eventId}:
+    get:
+      tags:
+      - "event"
+      summary: "Get books of event"
+      description: "Returns a book"
+      operationId: "getEventsBooks"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "eventId"
+        in: "path"
+        description: "ID of event to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "A collection of Books"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Book"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Event not found"
+      x-swagger-router-controller: "Event"
   /themes/getThemes:
     get:
       tags:
